--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <section id="intro">
     <div class="intro-container wow fadeIn">
-      <img src="../TheEvent/img/peach_1f351.png" alt="">
+      <img src="./img/peach_1f351.png" alt="">
       <h1 class="mb-4 pb-0">MALATYALI İNGİLİZ<br><span>DOĞUM GÜNÜN</span> KUTLU OLSUN</h1>
       <p class="mb-4 pb-0">Nice Mutlu Senelere</p>
       <a href="#faq" class="about-btn scrollto">Şuraya bir bas</a>
