--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
   <link href="lib/venobox/venobox.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-  <style>
- 
-  </style>
 </head>
 
 <body>
   <section id="intro">
     <div class="intro-container wow fadeIn">
       <img src="./img/peach_1f351.png" alt="">
+      <h3 class="mb-4 pb-0" style="color: #ff9851">Iğdır Kayısısı</h3>
       <h1 class="mb-4 pb-0">MALATYALI İNGİLİZ<br><span>DOĞUM GÜNÜN</span> KUTLU OLSUN</h1>
       <p class="mb-4 pb-0">Nice Mutlu Senelere</p>
       <a href="#faq" class="about-btn scrollto">Şuraya bir bas</a>
